@@ -6,10 +6,12 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import uk.gov.hmcts.reform.hmc.client.futurehearing.ErrorDetails;
 import uk.gov.hmcts.reform.hmc.config.MessageSenderToTopicConfiguration;
 import uk.gov.hmcts.reform.hmc.data.HearingEntity;
 import uk.gov.hmcts.reform.hmc.data.HearingResponseEntity;
 import uk.gov.hmcts.reform.hmc.data.PendingRequestEntity;
+import uk.gov.hmcts.reform.hmc.errorhandling.ApiClientException;
 import uk.gov.hmcts.reform.hmc.errorhandling.AuthenticationException;
 import uk.gov.hmcts.reform.hmc.errorhandling.BadFutureHearingRequestException;
 import uk.gov.hmcts.reform.hmc.errorhandling.ResourceNotFoundException;
@@ -21,6 +23,7 @@ import uk.gov.hmcts.reform.hmc.repository.PendingRequestRepository;
 
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -210,13 +213,15 @@ public class PendingRequestServiceImpl implements PendingRequestService {
 
     private static final Map<Class<? extends Exception>, BiConsumer<Exception, HearingEntity>> EXCEPTION_HANDLERS =
         Map.of(
-        ResourceNotFoundException.class, (ex, entity) ->
-            handleResourceNotFoundException((ResourceNotFoundException) ex, entity),
-        AuthenticationException.class, (ex, entity) ->
-            handleAuthenticationException((AuthenticationException) ex, entity),
-        BadFutureHearingRequestException.class, (ex, entity) ->
-            handleBadFutureHearingRequestException((BadFutureHearingRequestException) ex, entity)
-    );
+            ResourceNotFoundException.class, (ex, entity) ->
+                handleResourceNotFoundException((ResourceNotFoundException) ex, entity),
+            AuthenticationException.class, (ex, entity) ->
+                handleAuthenticationException((AuthenticationException) ex, entity),
+            BadFutureHearingRequestException.class, (ex, entity) ->
+                handleBadFutureHearingRequestException((BadFutureHearingRequestException) ex, entity),
+            ApiClientException.class, (ex, entity) ->
+                handleApiClientException((ApiClientException) ex, entity)
+        );
 
     public void escalatePendingRequests() {
         log.info("escalatePendingRequests()");
@@ -270,15 +275,22 @@ public class PendingRequestServiceImpl implements PendingRequestService {
     }
 
     private static void handleAuthenticationException(AuthenticationException ex, HearingEntity entity) {
-        Integer errorCode = (ex.getErrorDetails().getAuthErrorCodes() != null
-            && !ex.getErrorDetails().getAuthErrorCodes().isEmpty())
-            ? ex.getErrorDetails().getAuthErrorCodes().get(0) : HttpStatus.UNAUTHORIZED.value();
-        handleException(entity, errorCode, ex.getErrorDetails().getAuthErrorDescription());
+        ErrorDetails errorDetails = ex.getErrorDetails();
+        Integer errorCode = (errorDetails != null
+            && errorDetails.getAuthErrorCodes() != null
+            && !errorDetails.getAuthErrorCodes().isEmpty())
+            ? errorDetails.getAuthErrorCodes().getFirst() : HttpStatus.UNAUTHORIZED.value();
+        String errorDescription = errorDetails != null ? errorDetails.getAuthErrorDescription() : null;
+        handleException(entity, errorCode, errorDescription);
     }
 
     private static void handleBadFutureHearingRequestException(BadFutureHearingRequestException ex,
                                                                HearingEntity entity) {
         handleException(entity, ex.getErrorDetails().getErrorCode(), ex.getErrorDetails().getErrorDescription());
+    }
+
+    private static void handleApiClientException(ApiClientException ex, HearingEntity entity) {
+        handleException(entity, ex.getErrorCode(), ex.getErrorDescription());
     }
 
     private JsonNode extractErrorDetails(Exception exception) {
@@ -288,6 +300,11 @@ public class PendingRequestServiceImpl implements PendingRequestService {
             return objectMapper.convertValue(authException.getErrorDetails(), JsonNode.class);
         } else if (exception instanceof BadFutureHearingRequestException badRequestException) {
             return objectMapper.convertValue(badRequestException.getErrorDetails(), JsonNode.class);
+        } else if (exception instanceof ApiClientException apiClientException) {
+            Map<String, Object> errorInfo = new HashMap<>();
+            errorInfo.put("errorCode", apiClientException.getErrorCode());
+            errorInfo.put("errorDescription", apiClientException.getErrorDescription());
+            return objectMapper.convertValue(errorInfo, JsonNode.class);
         }
         return objectMapper.convertValue(exception.getMessage(), JsonNode.class);
     }
